qbittorrent/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  replicas: 1
  template:
    metadata:
      labels:
        app: qbittorrent
        deployed_by: argocd
    spec:
      containers:
        - name: gluetun-ivpn
          image: qmcgaw/gluetun:latest
          securityContext:                          
            privileged: true                        
            capabilities:                           
              add:                                  
                - NET_ADMIN
          ports:                                    
            - containerPort: 8888                   
            - containerPort: 8388                   
            - containerPort: 8388                   
              protocol: UDP                         
            - containerPort: 8000      
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 6881
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /config
            name: qbittorrent-config
          - mountPath: /downloads
            name: qbittorrent-downloads
      volumes:
      - persistentVolumeClaim:
          claimName: qbittorrent-config
        name: qbittorrent-config
      - persistentVolumeClaim:
          claimName: qbittorrent-downloads
        name: qbittorrent-downloads
